{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 927,
  "lineage": "504985b3-53ae-67ec-116f-85be435180f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023cc0ab507f5de92",
            "domain": "vpc",
            "id": "eipalloc-023cc0ab507f5de92",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-46-137-40-75.eu-west-1.compute.amazonaws.com",
            "public_ip": "46.137.40.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraformEnvironment-elastic-ip"
            },
            "tags_all": {
              "Name": "terraformEnvironment-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:internet-gateway/igw-01105cf52c7cb4950",
            "id": "igw-01105cf52c7cb4950",
            "owner_id": "303968904536",
            "tags": {
              "Name": "TF_internet_gateway"
            },
            "tags_all": {
              "Name": "TF_internet_gateway"
            },
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:loadbalancer/app/terraformEnvironment-alb/601ab4dd16675ab5",
            "arn_suffix": "app/terraformEnvironment-alb/601ab4dd16675ab5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformEnvironment-alb-1844192724.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:loadbalancer/app/terraformEnvironment-alb/601ab4dd16675ab5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformEnvironment-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06d578b9fcd6f6e61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0089e23d44c7ead8c"
              },
              {
                "subnet_id": "subnet-0ed58b0c1b3a78eec"
              }
            ],
            "subnets": [
              "subnet-0089e23d44c7ead8c",
              "subnet-0ed58b0c1b3a78eec"
            ],
            "vpc_id": "vpc-086f7b655cbbc33b5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:listener/app/terraformEnvironment-alb/601ab4dd16675ab5/7f444d8d91347a9f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:targetgroup/terraformEnvironment-tgrp/e3adcac4fae451f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:listener/app/terraformEnvironment-alb/601ab4dd16675ab5/7f444d8d91347a9f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:loadbalancer/app/terraformEnvironment-alb/601ab4dd16675ab5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "terraformEnvironment-alb-listenter"
            },
            "tags_all": {
              "Name": "terraformEnvironment-alb-listenter"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:targetgroup/terraformEnvironment-tgrp/e3adcac4fae451f7",
            "arn_suffix": "targetgroup/terraformEnvironment-tgrp/e3adcac4fae451f7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:303968904536:targetgroup/terraformEnvironment-tgrp/e3adcac4fae451f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraformEnvironment-tgrp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023cc0ab507f5de92",
            "association_id": "eipassoc-04d8bf1724ceaaea3",
            "connectivity_type": "public",
            "id": "nat-01d30e2e3d76ed3c1",
            "network_interface_id": "eni-018a8060daf675d7b",
            "private_ip": "10.10.0.35",
            "public_ip": "46.137.40.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0089e23d44c7ead8c",
            "tags": {
              "Name": "TFInternetGateway"
            },
            "tags_all": {
              "Name": "TFInternetGateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:route-table/rtb-041841dc78fdf71d5",
            "id": "rtb-041841dc78fdf71d5",
            "owner_id": "303968904536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d30e2e3d76ed3c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraformEnvironment-private-route-table"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:route-table/rtb-06b9f665ab3518f74",
            "id": "rtb-06b9f665ab3518f74",
            "owner_id": "303968904536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01105cf52c7cb4950",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraformEnvironment-public-route-table"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0357432bbd8a833e0",
            "route_table_id": "rtb-041841dc78fdf71d5",
            "subnet_id": "subnet-0c35da497a9bbe7e7"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9c906c077370caf",
            "route_table_id": "rtb-041841dc78fdf71d5",
            "subnet_id": "subnet-0f67ce31317c52851"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061aa7a5deb9d99b0",
            "route_table_id": "rtb-06b9f665ab3518f74",
            "subnet_id": "subnet-0089e23d44c7ead8c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7c945fac039bb5",
            "route_table_id": "rtb-06b9f665ab3518f74",
            "subnet_id": "subnet-0ed58b0c1b3a78eec"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:security-group/sg-06d578b9fcd6f6e61",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d578b9fcd6f6e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformEnvironment-alb-security-group",
            "name_prefix": "",
            "owner_id": "303968904536",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformEnvironment-alb-security-group"
            },
            "tags_all": {
              "Name": "terraformEnvironment-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:security-group/sg-007f139690ddccc58",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f139690ddccc58",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d578b9fcd6f6e61"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d578b9fcd6f6e61"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformEnvironment-asg-security-group",
            "name_prefix": "",
            "owner_id": "303968904536",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformEnvironment-asg-security-group"
            },
            "tags_all": {
              "Name": "terraformEnvironment-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:subnet/subnet-0c35da497a9bbe7e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c35da497a9bbe7e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "303968904536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-private-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-subnet-eu-west-1a"
            },
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:subnet/subnet-0f67ce31317c52851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f67ce31317c52851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "303968904536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-private-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-subnet-eu-west-1b"
            },
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:subnet/subnet-0089e23d44c7ead8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0089e23d44c7ead8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "303968904536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-public-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-subnet-eu-west-1a"
            },
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:subnet/subnet-0ed58b0c1b3a78eec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed58b0c1b3a78eec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "303968904536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-public-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-subnet-eu-west-1b"
            },
            "vpc_id": "vpc-086f7b655cbbc33b5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:303968904536:vpc/vpc-086f7b655cbbc33b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b990551e1cf71973",
            "default_route_table_id": "rtb-063418f24b94a8b23",
            "default_security_group_id": "sg-01c992f87573fc158",
            "dhcp_options_id": "dopt-055f4415275576b90",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086f7b655cbbc33b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063418f24b94a8b23",
            "owner_id": "303968904536",
            "tags": {
              "Name": "TFVPC"
            },
            "tags_all": {
              "Name": "TFVPC"
            }
          }
        }
      ]
    }
  ]
}